<resources>
    <string name="app_name">JojoStagram</string>
    <string name="add_history">Historique des ajouts</string>
    <string name="add_image">Ajouter une image</string>
    <string name="add">Ajouter</string>
    <string name="placeholder_like">[likes]</string>
    <string name="placeholder_image_desc">[imageName] - publié par</string>
    <string name="placeholder_image_desc2">[userCreator]</string>
    <string name="create_new_account">Créer un nouveau compte</string>
    <string name="name">Nom</string>
    <string name="password">Mot de passe</string>
    <string name="placeholder_username">D1OBr4nd0</string>
    <string name="placeholder_password">***************</string>
    <string name="create_account">Créer un compte</string>
    <string name="placeholder_email">dio.brando@wryyyyy.jojo</string>
    <string name="e_mail">E-mail</string>
    <string name="already_signed">Vous vous êtes déjà inscrit ? Connectez-vous</string>
    <string name="connect">Connexion</string>
    <string name="my_likes">MES LIKES</string>
    <string name="search_an_image">Rechercher une image</string>
    <string name="tendency">TENDENCY</string>
    <string name="CD_addimg_menu">addImg Menu</string>
    <string name="my_profil">MON PROFIL</string>
    <string name="username_text">Nom d\'utilisateur:</string>
    <string name="empty_placeholder"> </string>
    <string name="joestars_text">JoeStars :</string>
    <string name="disconnect">Déconnexion</string>
    <string name="invalid_email">Email invalide</string>
    <string name="email_already_used">Email déjà utilisé</string>
    <string name="invalid_username">Nom d\'utilisateur invalide.</string>
    <string name="username_already_used">Nom d\'utilisateur déjà utilisé</string>
    <string name="unknown_error">Unknown error</string>
    <string name="connection_error">Erreur de connexion</string>
    <string name="server_error">Erreur serveur</string>
    <string name="data_error">Erreur de donnée</string>
    <string name="CD_menacing">Menacing</string>
    <string name="CD_home_icon">Page Tendency</string>
    <string name="CD_search_icon">Page de Recherche</string>
    <string name="CD_profil_icon">Page de Profile</string>
    <string name="CD_add_icon">Page Ajout d\'Image</string>
    <string name="CD_like_page">Page Mes Likes</string>
    <string name="CD_profil_picture">Photo de profile</string>
    <string name="CD_joestars">Joestars Icon</string>
    <string name="CD_like_icon">Like Icon</string>
    <string name="CD_media_image">Media Image</string>
</resources>