<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_Account">

    <ImageView
        android:id="@+id/bgGradientImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/empty_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bg" />

    <ImageView
        android:id="@+id/menacingBG1"
        android:layout_width="217dp"
        android:layout_height="432dp"
        android:contentDescription="@string/CD_menacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menacing1" />

    <ImageView
        android:id="@+id/menacingBG2"
        android:layout_width="133dp"
        android:layout_height="258dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/CD_menacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menacingBG1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/menacing2" />

    <TextView
        android:id="@+id/titleCreateAccount"
        android:layout_width="352dp"
        android:layout_height="0dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="160dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/create_new_account"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textNameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCreateAccount"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textMDP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textMDPInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNameInput"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/textNameInput"
        android:layout_width="359dp"
        android:layout_height="69dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/placeholder_username"
        android:inputType="text"
        android:textColor="#000000"
        android:autofillHints="username"
        app:layout_constraintBottom_toTopOf="@+id/textEmailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCreateAccount"
        app:layout_constraintVertical_bias="0.504" />

    <EditText
        android:id="@+id/textMDPInput"
        android:layout_width="358dp"
        android:layout_height="61dp"
        android:layout_marginBottom="36dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/placeholder_password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/createAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="266dp"
        android:layout_height="73dp"
        android:layout_marginBottom="52dp"
        android:onClick="register"
        android:text="@string/create_account"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/bgGradientImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textEmailInput"
        android:layout_width="357dp"
        android:layout_height="58dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFDFD"
        android:ems="10"
        android:hint="@string/placeholder_email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textMDPInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="343dp"
        android:text="@string/e_mail"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="@+id/bgGradientImage"
        app:layout_constraintTop_toBottomOf="@+id/titleCreateAccount" />

    <TextView
        android:id="@+id/textConnexionReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/already_signed"
        android:textColor="#9C4179"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textNameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCreateAccount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/createAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMDPInput" />

</androidx.constraintlayout.widget.ConstraintLayout>