<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <ImageView
        android:id="@+id/bgGradientImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/empty_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bg" />

    <ImageView
        android:id="@+id/menacingBG1"
        android:layout_width="217dp"
        android:layout_height="432dp"
        android:contentDescription="@string/CD_menacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menacing1" />

    <ImageView
        android:id="@+id/menacingBG2"
        android:layout_width="133dp"
        android:layout_height="258dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/CD_menacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menacingBG1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/menacing2" />

    <TextView
        android:id="@+id/titleCreateAccount"
        android:layout_width="360dp"
        android:layout_height="77dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/bgGradientImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bgGradientImage"
        app:layout_constraintVertical_bias="0.169" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textNameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCreateAccount"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textMDP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textMDPInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNameInput"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/textNameInput"
        android:layout_width="359dp"
        android:layout_height="69dp"
        android:layout_marginBottom="68dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/placeholder_username"
        android:autofillHints="username"
        android:inputType="text"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textMDPInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCreateAccount"
        app:layout_constraintVertical_bias="0.906" />

    <EditText
        android:id="@+id/textMDPInput"
        android:layout_width="358dp"
        android:layout_height="61dp"
        android:layout_marginBottom="32dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/placeholder_password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/createAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="266dp"
        android:layout_height="73dp"
        android:layout_marginBottom="104dp"
        android:onClick="register"
        android:text="@string/connect"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/bgGradientImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/createAccountLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="createAccount"
        android:text="@string/create_account"
        android:textColor="#673AB7"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/bgGradientImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dbgText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F40C0C"
        app:layout_constraintBottom_toBottomOf="@+id/bgGradientImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountLink" />

</androidx.constraintlayout.widget.ConstraintLayout>